--- a/IdeaProjects/MandelbrotProjekt/pom.xml
+++ b/IdeaProjects/MandelbrotProjekt/pom.xml
@@ -4,16 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.EPSHL</groupId>
-    <artifactId>MandelCalculation</artifactId>
+    <artifactId>MandelCalculationServer</artifactId>
     <version>1.0.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
     </parent>
-
     <dependencies>
-        <!-- Spring stuff -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -22,22 +20,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>       
-        <!-- End Spring stuff -->
-
-        <!-- Json stuff -->
+        </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- End Json stuff -->          
     </dependencies>
     <properties>
         <java.version>1.8</java.version>
         <spring-version>4.3.7.RELEASE</spring-version>
     </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -53,7 +46,6 @@
         </resources>
         <finalName>MandelCalculationServer</finalName>
     </build>
-
     <repositories>
         <repository>
             <id>spring-releases</id>
